# redemon-lang

./: .gitignore  Makefile  README.md  dune  dune-project  flake.nix  redemon-lang.opam  redemon_lang.install  redemon_lang.opam
.github/workflows/: ci.yml
lib/: abstract.ml  api.ml  codegen.ml  demo.ml  demo.mli  dune  redemon_lang.ml  synthesis.ml  synthesize.ml  texpr.ml  tree.ml
lib/llm_api_js/: api.ml  dune
lib/llm_api_unix/: api.ml  dune
lib/tree/: diff.ml  dune  lexer.mll  parser.mly  syntax.ml  syntax.mli
lib/with_llm_unix/: api.ml
test/: dune  test_redemon_lang.ml
